# RustMIRPass2021

./: Cargo.toml  README.md
src/: main.rs
stubs/hello/: Cargo.toml
