[package]
name = "RustMIRPass"
version = "0.1.0"
authors = ["BurtonQin <bobbqqin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = { version = "0.15.1", optional = true }
directories = { version = "4.0.1", optional = true }
rustc_version = { version = "0.4.0", optional = true }
getrandom = { version = "0.2.8", features = ["std"] }
byteorder = "1.3"
env_logger = "0.9.3"
log = "0.4"
shell-escape = "0.1.4"
hex = "0.4.0"
rand = "0.8.5"

[profile.dev]
incremental = false
